syntax = "proto3";

package userpb;

option go_package = "./userpb";

message User {
    string id = 1;
    string email = 2;
    string password = 3;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    User user = 2;
}

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

